tests/error/no_cast.gw
// [contains] invalid cast to
class C{}
class D{}

C c;
D d;
c $ D;
